--- a/style-panel.css
+++ b/style-panel.css
@@ -3,12 +3,12 @@
     src: url("fonts/Lato-Regular.ttf");
 }
 
-header a:link, header a:visited {
+a:link, a:visited {
     color: rgb(184, 59, 112);
     text-decoration: none;
 }
 
-header a:hover, header a:active {
+a:hover, a:active {
     color: rgba(184, 59, 112, 0.5);
     text-decoration: none;
 }
@@ -91,4 +91,25 @@ input[type=submit] {
     background: rgb(184, 59, 112);
     color: white;
     padding: 10px;
+}
+
+th {
+    padding: 5px 20px;
+    text-align: left;
+    font-weight: normal;
+    color: grey;
+}
+
+td {
+    padding: 5px 20px;
+}
+
+tr:nth-of-type(even) th,
+tr:nth-of-type(even) td
+{
+    background: #f5f5f5;
+}
+
+.koszt {
+    text-align: right;
 }
