Poprawia routing i dodaje nowe tlo

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
     margin: 0;
     font-size: 100%;
     font-family: Lato;
-    background: url(images/bo_play_pattern.png);
+    background: url(images/layout2_home_webra.png);
 }
 
 .calosc {
